Establish aliases for slurm functions accessed by plugins that are user loadable as shared aliases. Give slurm functions a prefix of "slurm_" to insure that no user functions with the same name is used instead. [For some reason a this same commit a minute ago did not seem to take effect.]

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -7,6 +7,9 @@ documents those changes that are of interest to users and admins.
     slurm.conf pathname)
  -- Remove slurmd "-f"
  -- Several documenation changes for slurm administrators
+ -- Convert shared object plugins to use only functions with prefix
+    of "slurm_" to avoid linking conflicts with applications using 
+    SLURM library
 
 * Changes in SLURM 0.3.0.0-pre9
 ===============================
