--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -232,6 +232,10 @@ disables the status feature normally available when \fBsrun\fR receives
 a single Ctrl-C and causes \fBsrun\fR to instead immediately terminate the
 running job.
 .TP
+\fB\-Q\fR, \fB\-\-quiet\fR
+Quiet operation. Suppress informational messages. Errors will still
+be displayed.
+.TP
 \fB\-\-uid\fR=\fIuser\fR
 If
 .B srun
