--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -1,4 +1,4 @@
-.TH SQUEUE "1" "March 2004" "squeue 0.3" "Slurm components"
+.TH SQUEUE "1" "April 2004" "squeue 0.3" "Slurm components"
 
 .SH "NAME"
 squeue \- view information about jobs located in the SLURM scheduling queue.
@@ -114,8 +114,9 @@ List of node names explicitly requested by the job
 .TP
 \fB%N\fR
 List of nodes allocated to the job or job step. In the case of a 
-\fIcompleting\fR job, the list of nodes will comprise only those
-nodes that have not yet been returned to service.
+\fICOMPLETING\fR job, the list of nodes will comprise only those
+nodes that have not yet been returned to service. This may result 
+in the node count being greater than the number of listed nodes.
 .TP
 \fB%o\fR
 Minimum number of nodes requested by the job
