o add support for SLURM_REMOTE_CWD env variable to set -D, --chdir    option from environment and documentation of new env var.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -570,6 +570,9 @@ SLURM_OVERCOMMIT
 SLURM_PARTITION
 \fB\-p, --partition\fR=\fIpartition\fR
 .TP
+SLURM_REMOTE_CWD
+\fB\-D, --chdir=\R=\fIdir\fR
+.TP
 SLURM_STDERRMODE
 \fB\-e, \-\-error\fR=\fImode\fR
 .TP
