--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,7 +1,7 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.0.0-pre10 (not tagged yet)
+* Changes in SLURM 0.3.0.0-pre10
 ================================
  -- Fix bugs in support of slurmctld "-f" option (specify different 
     slurm.conf pathname).
