--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -469,6 +469,13 @@ specification will utilize this partition.
 Possible values are "YES" and "NO". 
 The default value is "NO".
 .TP
+\fBHidden\fR
+Specifies if the partition and its jobs are to be hidden by default. 
+Hidden partitions will by default not be reported by the SLURM 
+APIs or commands.
+Possible values are "YES" and "NO". 
+The default value is "NO".
+.TP
 \fBRootOnly\fR
 Specifies if only user ID zero (or user <i>root</i> may 
 initiate jobs in this partition.
