--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -6,6 +6,9 @@ documents those changes that are of interest to users and admins.
  -- Support for AIX added (a few bugs do remain).
  -- Fix memory leak in slurmctld, slurm_cred_create().
  -- On ELF systems, export BNR_* functions from SLURM API. 
+ -- Add support for "hidden" partitions (applies to their 
+    nodes, jobs, and job steps as well). APIs and commands 
+    modified to optionally display hidden partitions.
 
 * Changes in SLURM 0.3.0.0-pre10
 ================================
