--- a/trunk/doc/man/man3/slurm_free_job_info_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_info_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2003" "Morris Jette" "Slurm job information reporting functions"
+.TH "Slurm API" "3" "April 2004" "Morris Jette" "Slurm job information reporting functions"
 .SH "NAME"
 slurm_free_job_info_msg, slurm_get_end_time,
 slurm_load_jobs, slurm_pid2jobid, 
@@ -22,7 +22,9 @@ int \fBslurm_load_jobs\fR (
 .br 
 	time_t \fIupdate_time\fP,
 .br 
-	job_info_msg_t **\fIjob_info_msg_pptr\fP
+	job_info_msg_t **\fIjob_info_msg_pptr\fP,
+.br
+	uint16_t \fIshow_all\fP
 .br 
 );
 .LP 
@@ -100,6 +102,12 @@ Print one record per line if non-zero.
 \fIout_file\fP
 Specifies the file to print data to.
 .TP 
+\fIshow_all\fP
+Report information about jobs in all partitions if non-zero.
+Information about jobs in partitions that are configured as 
+hidden and partitions that the user's group is unable to utilize 
+are not reported by default.
+.TP 
 \fIupdate_time\fP
 For all of the following informational calls, if update_time is equal to or 
 greater than the last time changes where made to that information, new 
@@ -167,7 +175,7 @@ int main (int argc, char *argv[])
 .br
 	if ( slurm_load_jobs ((time_t) NULL, 
 .br
-	                      &job_buffer_ptr) ) {
+	                      &job_buffer_ptr, 1) ) {
 .br
 		slurm_perror ("slurm_load_jobs error");
 .br
@@ -220,6 +228,11 @@ int main (int argc, char *argv[])
 	exit (0);
 .br 
 }
+
+.SH "NOTE"
+Some data structures contain index values to cross-reference each other. 
+If the \fIshow_all\fP argument is not set when getting this data, these index 
+values will be invalid.
 
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
