--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -9,6 +9,9 @@ documents those changes that are of interest to users and admins.
  -- Add support for "hidden" partitions (applies to their 
     nodes, jobs, and job steps as well). APIs and commands 
     modified to optionally display hidden partitions.
+ -- Modify partition's group_allow test to be based upon the user 
+    of the allocation rather than the user making the allocation 
+    request (user root for LCRM batch jobs).
 
 * Changes in SLURM 0.3.0.0-pre10
 ================================
