--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -13,6 +13,8 @@ documents those changes that are of interest to users and admins.
     of the allocation rather than the user making the allocation 
     request (user root for LCRM batch jobs).
  -- Restructure plugin directory structure.
+ -- New --core=type option in srun for lightweight corefile support.
+    (requires liblwcf)
 
 * Changes in SLURM 0.3.0.0-pre10
 ================================
