o fix entry for -n, --ntask to state one process per CPU as default    not one process per Node.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -25,7 +25,7 @@ parallel run options
 Specify the number of processes to run. Request that \fBsrun\fR
 allocate \fIntasks\fR processes. Specification of the number of 
 processes per node may be achieved with the \fB\-c\fR and \fB\-N\fR
-options. The default is one process per node unless \fB\-c\fR 
+options. The default is one process per CPU unless \fB\-c\fR 
 explicitly specifies otherwise.
 .TP
 \fB\-c\fR, \fB\-\-cpus\-per\-task\fR=\fIncpus\fR
