--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -489,14 +489,17 @@ The default value is "NO".
 \fBMaxNodes\fR
 Maximum count of nodes which may be allocated to any single job.
 The default value is "UNLIMITED", which is represented internally as -1.
+This limit does not apply to jobs executed by SlurmUser or user root.
 .TP
 \fBMaxTime\fR
 Maximum wall-time limit for any job in minutes. The default 
 value is "UNLIMITED", which is represented internally as -1.
+This limit does not apply to jobs executed by SlurmUser or user root.
 .TP
 \fBMinNodes\fR
 Minimum count of nodes which may be allocated to any single job.
 The default value is 1.
+This limit does not apply to jobs executed by SlurmUser or user root.
 .TP
 \fBNodes\fR
 Comma separated list of nodes which are associated with this 
