--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.1
+========================
+ -- Fix for slurmd spinning when stdin buffers full (gnats:434)
+
 * Changes in SLURM 0.3.0
 ========================
  -- Support for AIX added (a few bugs do remain).
