--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,10 @@ documents those changes that are of interest to users and admins.
 ========================
  -- Set SLURM_TASKS_PER_NODE env var for batch jobs (and LAM/MPI).
  -- Fix for slurmd spinning when stdin buffers full (gnats:434)
+ -- Change some slurmctld malloc sizes to reduce demand for realloc
+    calls, improves performance and eliminates realloc failure on 
+    RH EL3 under extremely heavy workload apparently due to memory 
+    fragmentation
 
 * Changes in SLURM 0.3.0
 ========================
