Fix handling of node state change requests being processed prior to node registration (in particular after changing state from UNKNOWN to DRAINING, an inactive node was not registering to reset its state to DRAINED)

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -13,6 +13,8 @@ documents those changes that are of interest to users and admins.
  -- Modify security_2_2 test to function with release 0.3
  -- Fix broken rpm build when libslurm not already installed.
  -- New slurmd option -M to mlock() slurmd process into memory.
+ -- Fix node processing if state change requested via scontrol 
+    prior to initial node registration.
  
 * Changes in SLURM 0.3.0
 ========================
