--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -1,4 +1,4 @@
-.TH SQUEUE "1" "April 2004" "squeue 0.3" "Slurm components"
+.TH SQUEUE "1" "May 2004" "squeue 0.3" "Slurm components"
 
 .SH "NAME"
 squeue \- view information about jobs located in the SLURM scheduling queue.
@@ -8,12 +8,12 @@ squeue \- view information about jobs located in the SLURM scheduling queue.
 
 .SH "DESCRIPTION"
 \fBsqueue\fR is used to view job and job step information for jobs managed by 
-\fBslurmctld\fR. 
+SLURM. 
 
 .TP
 OPTIONS
 .TP
-\fB\-\-all\fR,
+\fB\-a\fR, \fB\-\-all\fR
 Display information about jobs and job steps in all partions. 
 This causes information to be displayed about partitions that are configured as 
 hidden and partitions that are unavailable to user's group.
