Correct squeue option --users is really --user in the code.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -203,7 +203,7 @@ jobs are reported. Valid states (in both extended and compact form) include:
 pending (pd), running (r), completing (cg), completed (cd), failed (f),
 timeout (to), and node_fail (nf).
 .TP
-\fB\-u <user_list>\fR, \fB\-\-users=<user_list>\fR
+\fB\-u <user_list>\fR, \fB\-\-user=<user_list>\fR
 Specifies a comma separated list of users whose jobs or job steps are to be
 reported.
 .TP
